[package]
edition      = "2024"
name         = "slide-button-rs"
rust-version = "1.88"
version      = "0.2.0"
default-run  = "slide-button-rs"

[[bin]]
name = "slide-button-rs"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = [
  "esp32c3",
  "log-04",
  "unstable",
] }

esp-rtos = { version = "0.1.1", features = [
  "esp-alloc",
  "esp-radio",
  "esp32c3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c3"] }
log                    = "0.4.27"

critical-section = "1.2.0"
embedded-io = { version = "0.6.1", default-features = false }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.0", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.0", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.16.0", features = [
  "esp-alloc",
  "esp32c3",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc" }
serde-json-core = "0.6.0"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_derive = "1.0.228"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
